<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="414dp"
        android:layout_height="725dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="354dp"
                android:layout_height="197dp"
                app:srcCompat="@drawable/smartphone"
                android:contentDescription="@string/todo" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:isIndicator="true"
                android:rating="4"/>

            <TextView
                android:id="@+id/topic_sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:text="@string/sony_xperia_5_ii"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0009ff"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/rs_150_000" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="350dp"
                android:textColor="#000000"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:text="@string/the_phone_comes_with_a_6_10_inch_touchscreen_display_with_a_resolution_of_1080x2520_pixels_and_an_aspect_ratio_of_21_9_sony_xperia_5_ii_comes_with_8gb_of_ram_the_sony_xperia_5_ii_runs_android_10_and_is_powered_by_a_4000mah_battery_the_sony_xperia_5_ii_supports_proprietary_fast_charging" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/sony" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sep_17_2020"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <View
                style="@style/Divider"
                android:layout_width="307dp"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />


            <FrameLayout
                android:id="@+id/fragment"
                android:layout_width="match_parent"
                android:layout_height="200dp">
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userIcon"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="247dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="13dp"
                    android:text="@string/pathum"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="20sp">

                </TextView>
            </LinearLayout>

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:isIndicator="true"
                android:numStars="5"
                android:padding="0dp"
                android:rating="4"
                android:scaleX=".4"
                android:scaleY=".4"
                android:stepSize="1" />


            <TextView
                android:id="@+id/desc"
                android:layout_width="421dp"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/highly_recommended_with_your_purchase_cheap_and_with_good_performance" />

            <Button
                android:id="@+id/reviewbt"
                android:layout_width="148dp"
                android:layout_height="27dp"
                android:layout_marginStart="122dp"
                android:layout_marginLeft="192dp"
                android:layout_marginBottom="150dp"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="See All reviews"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>