<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Edit_comment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_google_signin_btn_icon_dark" />

        <TextView
            android:id="@+id/myname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/pathum"
            android:layout_marginLeft="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="606dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/myrate3"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginLeft="70dp"
            android:numStars="5"
            android:padding="0dp"
            android:rating="2"
            android:scaleX=".4"
            android:scaleY=".4"
            android:stepSize="1" />

        <TextView
            android:id="@+id/myreview"
            android:layout_width="367dp"
            android:layout_height="34dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/comment" />

        <Button
            android:id="@+id/editreview"
            android:layout_width="223dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="25dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/edit_your_comment"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp" />

        <View
            style="@style/Divider"
            android:layout_width="366dp"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp" />

    </LinearLayout>

</FrameLayout>